# mrs_uav_status

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.ci/: deploy_key_github.enc
.github/workflows/: ros_build_test.yml  ros_package_build.yml
battery_estimation/: batt.csv  plotter.py  short.csv
config/: camtest.yaml  darpa.yaml  default.yaml  f450_pixgarm.yaml  f550.yaml  f550_darpa.yaml  f550_hector.yaml  naki.yaml  status.yaml  vio.yaml
config/public/: default.yaml
include/: commons.h  input_box.h  menu.h  status_window.h  topic_info.h
launch/: acquisition.launch  acquisition.launch.py  acquisition.py  c.launch  camtest.launch  debug.launch  f450_pixgarm.launch  f550.launch  f550_darpa.launch  f550_hector.launch  naki.launch  ncurses_test.launch.py  status.launch  status.py  terminal.launch  vio.launch
old/launch/: status.launch
old/scripts/: get_public_params.py
old/synchro_tmux/custom_configs/: uav_names.yaml
scripts/: get_public_params.py  status.py  status.sh
src/: data_acquisition.cpp  input_box.cpp  menu.cpp  mrs_status.cpp  ncurses_test.cpp  status.cpp  status_window.cpp  topic_info.cpp
synchro_tmux/: .tmuxinator.yml  session.yml
synchro_tmux/custom_configs/: nimbro.yaml  uav_names.yaml
tmux/: tmux.sh
tmux/custom_configs/: nimbro.yaml
