<?xml version="1.0"?>
<package format="2">

  <name>mrs_status</name>
  <version>0.0.3</version>
  <description>The mrs_status package</description>

  <author email="hertdani@fel.cvut.cz">Dan Hert</author>
  <maintainer email="hertdani@fel.cvut.cz">Dan Hert</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>

  <export>
  </export>

</package>
