<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>mrs_uav_status</name>

  <version>2.0.0</version>
  <description>The mrs_uav_status package</description>

  <author email="hertdani@fel.cvut.cz">Dan Hert</author>
  <maintainer email="klaxalk@gmail.com">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>mrs_lib</depend>
  <depend>libboost-dev</depend>
  <depend>libncurses</depend>
  <depend>libncurses-dev</depend>
  <depend>backward_ros</depend>

  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
